linked github isses in release posts

--- a/_posts/2015-01-17-1.0.0-beta4-released.md
+++ b/_posts/2015-01-17-1.0.0-beta4-released.md
@@ -14,24 +14,24 @@ As this is the LAST BETA version, we've feature freeze until the final version 1
 ### Bugfixes
 ***
 
-* Closed #290 - Segfault in Windows build
-* Closed #336 - Positioning of namespace definition next to php tag
-* Closed #348 - Changed determination of omitted namespaces
+* Closed [#290](<{{ "290" | prepend: site.github_issue }}>) - Segfault in Windows build
+* Closed [#336](<{{ "336" | prepend: site.github_issue }}>) - Positioning of namespace definition next to php tag
+* Closed [#348](<{{ "348" | prepend: site.github_issue }}>) - Changed determination of omitted namespaces
 
 ### Features
 ***
 
-* Closed #282 - Implement logrotate functionality as Server
-* Closed #192 - Refactor configuration
-* Closed #350 - Creating EPB references by annotations + XML configuration
-* Closed #284 - Refactor Application implementation/interface
-* Closed #289 - Refactoring bean/servlet/manager registration in naming directory
-* Closed #285 - Refactor servlet engine virtual host management
-* Closed #291 - Configuration (XML configuration) based bean declaration
-* Closed #300 - Timer Service doesn't support seconds as period
-* Closed #281 - Refactoring InitialContext in NamingDirectory
-* Closed #182 - HTTP digest authentication within webserver
-* Closed #367 - Add XSD validation for additional XML configuration files
+* Closed [#282](<{{ "282" | prepend: site.github_issue }}>) - Implement logrotate functionality as Server
+* Closed [#192](<{{ "192" | prepend: site.github_issue }}>) - Refactor configuration
+* Closed [#350](<{{ "350" | prepend: site.github_issue }}>) - Creating EPB references by annotations + XML configuration
+* Closed [#284](<{{ "284" | prepend: site.github_issue }}>) - Refactor Application implementation/interface
+* Closed [#289](<{{ "289" | prepend: site.github_issue }}>) - Refactoring bean/servlet/manager registration in naming directory
+* Closed [#285](<{{ "285" | prepend: site.github_issue }}>) - Refactor servlet engine virtual host management
+* Closed [#291](<{{ "291" | prepend: site.github_issue }}>) - Configuration (XML configuration) based bean declaration
+* Closed [#300](<{{ "300" | prepend: site.github_issue }}>) - Timer Service doesn't support seconds as period
+* Closed [#281](<{{ "281" | prepend: site.github_issue }}>) - Refactoring InitialContext in NamingDirectory
+* Closed [#182](<{{ "182" | prepend: site.github_issue }}>) - HTTP digest authentication within webserver
+* Closed [#367](<{{ "367" | prepend: site.github_issue }}>) - Add XSD validation for additional XML configuration files
 * Introduced XSD validation for app based configuration files
 * Changed nikic/phlexy version from unstable `dev-master` to stable release `0.1`
 * Extended configuration validation and provided the new `configtest` CLI command
