added meta title and descriptions

--- a/_posts/2014-12-22-1.0.0-beta3-released.md
+++ b/_posts/2014-12-22-1.0.0-beta3-released.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  1.0.0-beta3 aka "Iron Horse" released
+meta_title: appserver.io 1.0.0-beta3 aka "Iron Horse" released
+meta_description: We've released 1.0.0-beta3. This release primarily contains a bugfix that solves a FastCGI connection problem when using latest HHVM versions
 date:   2014-12-22 12:00:00
 author: wagnert
 version: 1.0.0beta3
