--- a/_posts/2015-01-17-1.0.0-beta4-released.md
+++ b/_posts/2015-01-17-1.0.0-beta4-released.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  1.0.0-beta4 aka "Iron Horse" released
+meta_title: appserver.io 1.0.0-beta4 aka "Iron Horse" released
+meta_description: We’ve released the fifth and Last BETA release of appserver.io 1.0.0. As this is the LAST BETA version, we've feature freeze until the final version 1.0.0.
 date:   2015-01-17 12:00:00
 author: wagnert
 version: 1.0.0beta4
