--- a/_posts/2015-02-06-1.0.0-rc2-released.md
+++ b/_posts/2015-02-06-1.0.0-rc2-released.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  1.0.0-rc2 aka "Iron Horse" released
+meta_title: appserver.io 1.0.0-rc2 aka "Iron Horse" released
+meta_description: Second Release Candidate for appserver.io 1.0.0 aka "Iron Horse“. This RC provides several bugfixes and optimizations.
 date:   2015-02-05 12:00:00
 author: wagnert
 version: 1.0.0-rc2
