--- a/_posts/2015-02-02-1.0.0-rc1-released.md
+++ b/_posts/2015-02-02-1.0.0-rc1-released.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 title:  1.0.0-rc1 aka "Iron Horse" released
+meta_title: appserver.io 1.0.0-rc1 aka "Iron Horse" released
+meta_description: First Release Candidate for appserver.io 1.0.0 aka "Iron Horse“. This RC provides several bugfixes, improvements and PHPUnit tests.
 date:   2015-02-02 12:00:00
 author: wagnert
 version: 1.0.0-rc1
