refactored documentation links to be 1.1 per default

--- a/get-started/documentation/1.1.md
+++ b/get-started/documentation/1.1.md
@@ -3,6 +3,8 @@ layout: docs_1_1
 title: Documentation
 meta_title: appserver.io documentation – Getting started
 meta_description: We´re continously working hard on the appserver.io documentation, providing you comprehensive informations and guidance for an easy start.
+position: 10
+group: Get Started
 permalink: /get-started/documentation/1.1.html
 ---
 
