Refactoring blog post for version 1.1.0

--- a/_posts/2015-11-11-1.1.0-released.md
+++ b/_posts/2015-11-11-1.1.0-released.md
@@ -23,13 +23,15 @@ Beside many bugfixes and refactoring, "Iron Knight" comes with some new and help
 * Doctrine Integration (@PersistenceUnit annotation)
 * Lifecycle Callbacks for SFSB (@PostDetach, @PreAttach)
 
+You can find a detailed overview of all fixed bugs and closed issues on our [Github Releases](https://github.com/appserver-io/appserver/releases) page.
+
 ## Plattform
 
 As plattform, we define the PHP runtime version and the main daemon, that starts all other services, servers and finally the applications. The following updates and features are part of 1.1.0 aka the "Iron Knight" plattform.
 
 ### PHP 5.6.x
 
-Version 1.1.x is, as defined in [issue #683](https://github.com/appserver-io/appserver/issues/683), based on PHP 5.6.x and contains many security patches and performance improvents as well as a whole bunch of new functionaliy.
+Version 1.1.x is, as defined in [issue #683](https://github.com/appserver-io/appserver/issues/683), based on PHP 5.6.x and contains many security patches and performance improvements as well as a whole bunch of new functionaliy.
 
 ### Runlevels
 
@@ -45,7 +47,7 @@ ID | Name               | Description
  5 | Full               | Initialise and Start the Applications
  6 | Restart            | Restart the Application Server
 
-When appserver.io starts, for examle by invoking `service appserver start` on a Linux system's console, Runlevel `5` will be executed. Therefore, all previous Runlevles are synchronously executed whereas
+When appserver.io starts, for examle by invoking `service appserver start` on a Linux system's console, Runlevel `5` will be executed. Therefore, all previous Runlevles are synchronously executed before, whereas
 
 * runlevel 1 loads the system configuration and start's the base system
 * runlevel 2 start's the core daemons e. g. the telnet console
@@ -53,7 +55,7 @@ When appserver.io starts, for examle by invoking `service appserver start` on a 
 * runlevel 4 secures the servers by switching to the configured group and user
 * runlevel 5 finally bootstraps and start's the deployed applications
 
-The boostrap process now uses events to allow developers writing their own functionality, which usually will be listeners, that will be invoked while executing the available runlevels. These events can simply be configured by the `etc/appserver/conf.d/bootstrap.xml` file. Additionally there are separate configuration files, each one for the watcher daemon `etc/appserver/conf.d/boostrap-watcher.xml` and the setup command `etc/appserver/conf.d/bootstrap-command.xml`.
+The boostrap process now uses events to enable developers writing their own functionality, which usually will be listeners, that will be invoked while executing the available runlevels. These events can simply be configured by the `etc/appserver/conf.d/bootstrap.xml` file. Additionally there are separate configuration files, one for the watcher daemon `etc/appserver/conf.d/boostrap-watcher.xml` and one for the setup command `etc/appserver/conf.d/bootstrap-command.xml`.
 
 ### Management Console (Experimental)
 
@@ -61,14 +63,14 @@ You may ask yourself, how you can switch between the runlevels. The OS specific 
 
 This feature has been planned in issue [#763](https://github.com/appserver-io/appserver/issues/763) and specifies a Management Console that allows to execute commands on a internal commandline.
 
-The Management Console is actually experimental and in a pre-alpha stage. So switching between the runlevels using the `init` command is, beside the `exit` command, the only functionality that works in version 1.1.0. Basically, the Management Console supports different protocols, whereas only the Telnet based implementation is working now, but we've plans to integrate a SSH console in one of the next releases and extend the functionality e. g. with the following commands
+The Management Console is experimental and in a pre-alpha stage. So switching between the runlevels using the `init` command is, beside the `exit` command, the only functionality that works in version 1.1.0. Basically, the Management Console supports different protocols, whereas only the Telnet based implementation is working now, but we've plans to integrate a SSH console in one of the next releases and extend the functionality e. g. with the following commands
 
 * `su`: Switching the user
 * `top`: Overview all threads with required memory and CPU time
 * `status`: Textual overview about the server status
 * `service`: Start and stop container, servers and applications
 
-The Management Console can be configured in the main configuration file `etc/appserver/appserver.xml`. By default the Telnet based implementation is activated by default
+The Management Console can be configured in the main configuration file `etc/appserver/appserver.xml`. By default, the Telnet based implementation is activated
 
 ```xml
 ...
@@ -158,7 +160,7 @@ The proxy configuration consists of two parts. The first is part of the containe
 ...
 ```
 
-The second is part of the server configuration, that uses the configured upstream server. So if your application has a folder `test` and the requests should be handled by the configured Apache instance we configured before, you can simply add a locaction with a file handler that forwards the requests like this 
+The second is part of the server configuration, that uses the configured upstream server. So if your application has a folder `test` and the requests should be handled by the Apache instance we configured before, you can simply add a locaction with a file handler that forwards the requests, like this 
 
 ```xml
 ...
@@ -196,13 +198,17 @@ The Auto Index Module, defined with issue [700](https://github.com/appserver-io/
 </server>
 ```
 
-It is also possible to customize the layout by set the parameter `autoIndexTemplatePath` to a different template, that will be used to render the generated page.
+After restarting the application server, and pointing the browser to the directory autoindexing is enabled for, a page similar to
+
+![Auto Index Module]({{ "/assets/img/autoindex_module.png" | prepend: site.baseurl }} "You successfully configured the Auto Index Module")
+
+should be rendered. It is also possible to customize the layout by set the parameter `autoIndexTemplatePath` to a different template, that will be used to render the generated page.
 
 Read a more detailed description about the AutoIndex Module configuration in our [documentation](<{{ "/get-started/documentation/1.1/webserver.html#auto-index" | prepend: site.baseurl }}>).
 
-### Headers Modul
+### Headers Module
 
-The Headers Modul allows to override of, or append headers to, the response. This can, as configuration for most of the other modules, be done on server, virtual host or location level. To change the response header with the server signature, simply add the following lines to the server configuration
+The Headers Module allows admins and developers to override of, or append headers to, the response. This can, as configuration for most of the other modules, be done on server, virtual host or location level. To change the response header with the server signature, simply add the following lines to the server configuration
 
 ```xml
 ...
@@ -216,15 +222,15 @@ Read a more detailed description about the Headers Module configuration in our [
 
 ## Application Server
 
-Finally we release some important enhancements for the application server itself, which have a major impact on how applications can be build what configuration options are available now.  
+Finally we released some important enhancements for the application server itself, which have a major impact on how applications can be build and what configuration options are available.
 
 ### Application Configuration
 
 A frequently requested and helpful new option is the possibility to deliver nearly all parameters of the server or virtual host configuration with the application itself. This means that, up with version 1.1.0, applications can define their own servers and virtual hosts as well as they can override existing ones. This feature is enabled by default, but can be deactivated by a simple flag in the main server configuration, e. g. for a production environment.
 
-The new configuration options has to be delivered as XML files and are, as the main application configuration `context.xml`, located in the application's `META-INF` directory.
+The new configuration options has to be declared in XML files and these are, as the main application configuration `context.xml`, located in the application's `META-INF` directory.
 
-To deliver a simple virtual host configuration with the application, the file `containers.xml` in the applications `META-INF` directory needs the following content  
+To deliver a simple virtual host configuration with an application, the file `containers.xml` in the applications `META-INF` directory needs the following content  
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -248,15 +254,17 @@ To deliver a simple virtual host configuration with the application, the file `c
 
 As a virtual host is always bound to server, it is necessary to specify the container and the server name by the apropriate attributes.
 
+Beside the possiblity to configure/override server and virtual host configurations, a developer can also deliver a CRON configuration with his application, as described in section [CRON](#cron).
+
 You can find more informations about Application Configuration in our [documentation](<{{ "/get-started/documentation/1.1/configuration.html#application-configuration" | prepend: site.baseurl }}>). 
 
 ### Doctrine Integration (@PersistenceUnit annotation)
 
-Version 1.1.0 introduces a [seamless Doctrine integration](https://github.com/appserver-io/appserver/issues/819). The integration consists of three parts. The first part are the `Datasources` which describes the connection to a database for example. The second part are the `Persistence Units` that describes the `Entity Manager` and which `Datasource` to use. The third part are the Annotations used to inject the `Entity Manager` instance into the application's components.
+Version 1.1.0 introduces a [seamless Doctrine integration](https://github.com/appserver-io/appserver/issues/819). The integration consists of three parts. The first part are the `Datasources` which describes the connection to a database. The second part are the `Persistence Units` that describes the `Entity Manager` and the `Datasource` to be use. The third part are the Annotations used to inject the `Entity Manager` instance into the application's components.
 
-As `Datasources` have already been available since version 1.0.0, there was no clear concept when an how to use it. In our example application we demonstrated one possible way to use a `Datasource` to instanciate a Doctrine `Enitity Manager` instance. Since version 1.1.0, `Persistence Units` can be configured, to reference datasources. This allows  appserver.io to declare a `Persistence Unit` in a XML file `META-INF/persistence.xml` which can be used by DI via the `@PersistencUnit` annotation, to let the container inject a `Entity Manager` instance, which has been described by the `Persistence Unit`, into the applications components.
+As `Datasources` have already been available since version 1.0.0, there was no clear concept when an how to use it. In our example application we demonstrated one possible way to use a `Datasource` to instanciate a Doctrine `Enitity Manager` instance. Since version 1.1.0, `Persistence Units` can be configured, to reference datasources. This allows us to declare a `Persistence Unit` in a XML file `META-INF/persistence.xml`. This can be used by DI, via the `@PersistencUnit` annotation, to let the container inject a `Entity Manager` instance into an application's components.
 
-A short example would give a brief introduction how things will work together. First we define a `Datasource` describing a connection to a SQLite database, located in a file `META-INF/test-ds.xml` with the following lines
+A short example would give a brief introduction how things will work in combination. First we define a `Datasource` describing a connection to a SQLite database, located in a file `META-INF/test-ds.xml` with the following lines
 
 ```xml
 <?xml version="1.0" encoding="UTF-8"?>
@@ -299,7 +307,7 @@ The next step is to define the `Persistence Unit`. The file also has to be locat
 </persistence>
 ```
 
-The `Persistence Unit` references the `Datasource` with the value of the attribute `name` of the `<datasource/>` node. These are the necessary step to make a `Entity Manager` instance available in an application. To use the instance, e. g. in a `Stateless Session Bean`, a simple annotation is quite enough
+The `Persistence Unit` references the `Datasource` with the value of the attribute `name` of the `datasource` node. These are the necessary step to make a `Entity Manager` instance available in an application. To use the instance, e. g. in a `Stateless Session Bean`, a simple annotation is quite enough
 
 ```php
 <?php
@@ -335,7 +343,7 @@ That's all! More information is available in our [documentation](<{{ "/get-start
 
 ### Lifecycle Callbacks for SFSB (@PostDetach, @PreAttach)
 
-Finally we've added two new [Lifecycle Callbacks](https://github.com/appserver-io/appserver/issues/809) that enables a developer to execute code, before a `Stateful Session Bean` will be re-attached to the `Persistence Manager` or after it'll be loaded from.
+Finally we've added two new [Lifecycle Callbacks](https://github.com/appserver-io/appserver/issues/809) that enables a developer to execute code, before a `Stateful Session Bean (SFSB)` will be re-attached to the `Persistence Manager` or after it'll be loaded from.
 
 The `Lifecycle Callbacks` can be annotated by the `@PostDetach` and the `@PreAttach` annotations, each on one of the a `SFSBs` methods. These methods are useful, if a developer want to use not serializable resources in a `SFSB`, e. g. a database connection.
 
@@ -373,6 +381,6 @@ Read more about the available `Lifecycle Callbacks` and how they can be used in 
 
 "Iron Knight" provides easy to use solutions for some of the most discussed problems of version 1.0.x. As meanwhile there are production systems out there, we're and will be focused on giving developers the tools, they need to build high performance und rock solid web apps.
 
-As this blog post only gives a short introduction of the new features and documentation is sometimes hard to read, we've extended our example application with all that functionality. So if you're looking for best practices or how to's, have a look at the [example application](https://github.com/appserver-io-apps/example) that is, as well delivered with version 1.1.0.
+As this blog post only gives a short introduction of the new features and documentation is sometimes hard to read, we've extended our example application with examples of the functionality described above. So if you're looking for best practices or how to's, have a look at the [example application](https://github.com/appserver-io-apps/example) that is, as well delivered with version 1.1.0.
 
 If you have any additional questions, feel free to contact us on our well frequented [Gitter](https://gitter.im/appserver-io/appserver) chat. You're always welcome! 
